# vscode-c-cpp-template

./: .gitignore  CHANGELOG.md  CMakeDeps.cmake  CMakeLists.txt  CMakePresets.json  Makefile  README.md  make_windows
include/: commons.h  texts.h
src/: main.c  main.cpp
src/commons/: CMakeLists.txt  commons.c  commons.h
src/version/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
src/version/src/: version.cpp.in  version.h
test/: .gitignore
toolchain/: arm_cortex_m4.cmake  linux.cmake
tools/: memory_check
